@@ -1,6 +1,7 @@
 cm4all-myproxy (0.6) unstable; urgency=low
 
   * use Rendezvous Hashing instead of Consistent Hashing
+  * implement (optional) monitoring
   * fix memory leak
   * debian: restart after upgrade
 
